[package]
name = "tracker-proxy"
version = "0.3.0"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2021"
description = "A local proxy for BitTorrent trackers."

[dependencies]
anyhow = "1.0.51"
actix-web = "3"
reqwest = { version = "0.10.8", features = [ "socks" ] }

log = "0.4"
pretty_env_logger = "0.3"

clap = "2.33.3"

# modify the torrent
serde = { version = "1.0.132", features = ["derive"] }
serde_bencode = "0.2.3"
regex = "1.5.4"
lazy_static = "1.4.0"
flate2 = "1.0.22"
